<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preference_category_artwork_settings">
    <ListPreference
        android:defaultValue="musicbrainz"
        android:dialogTitle="@string/preference_artwork_album_provider_title"
        android:entries="@array/preference_artwork_album_provider_entries"
        android:entryValues="@array/preference_artwork_album_provider_values"
        android:key="@string/pref_album_provider_key"
        android:persistent="true"
        android:summary="@string/preference_artwork_album_provider_summary"
        android:title="@string/preference_artwork_album_provider_title" />
    <ListPreference
        android:defaultValue="fanart_tv"
        android:dialogTitle="@string/preference_artwork_artist_provider_title"
        android:entries="@array/preference_artwork_artist_provider_entries"
        android:entryValues="@array/preference_artwork_artist_provider_values"
        android:key="@string/pref_artist_provider_key"
        android:persistent="true"
        android:summary="@string/preference_artwork_artist_provider_summary"
        android:title="@string/preference_artwork_artist_provider_title" />
    <CheckBoxPreference
        android:title="@string/preference_artwork_wifi_only_title"
        android:summary="@string/preference_artwork_wifi_only_text"
        android:persistent="true"
        android:defaultValue="@bool/pref_download_wifi_default"
        android:key="@string/pref_download_wifi_only_key"
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_category_artwork_database_cleanup">
    <Preference
        android:key="@string/pref_clear_album_key"
        android:title="@string/preference_artwork_clear_album"
        android:summary="@string/preference_artwork_clear_album_summary"/>
    <Preference
        android:key="@string/pref_clear_artist_key"
        android:title="@string/preference_artwork_clear_artist"
        android:summary="@string/preference_artwork_clear_artist_summary"/>
    <Preference
        android:key="@string/pref_clear_blocked_album_key"
        android:title="@string/preference_artwork_clear_blocked_album"
        android:summary="@string/preference_artwork_clear_blocked_album_summary"/>
    <Preference
        android:key="@string/pref_clear_blocked_artist_key"
        android:title="@string/preference_artwork_clear_blocked_artist"
        android:summary="@string/preference_artwork_clear_blocked_artist_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_category_artwork_other_actions">
    <Preference
        android:key="@string/pref_bulk_load_key"
        android:title="@string/preference_artwork_bulk_load"
        android:summary="@string/preference_artwork_bulk_load_summary"/>
    </PreferenceCategory>
</PreferenceScreen>