<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_single_mode"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/action_toggle_single_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_consume_mode"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/action_toggle_consume_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_current_song"
        android:orderInCategory="6"
        android:title="@string/action_share_current_song"
        app:showAsAction="never"/>
    <group android:id="@+id/group_playlist_actions">
        <item
            android:id="@+id/action_save_playlist"
            android:orderInCategory="1"
            android:title="@string/action_save_playlist"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_shuffle_playlist"
            android:orderInCategory="2"
            android:title="@string/action_shuffle_playlist"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_clear_playlist"
            android:orderInCategory="3"
            android:title="@string/action_clear_playlist"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_add_url"
            android:orderInCategory="4"
            android:title="@string/action_add_url"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_jump_to_current"
            android:orderInCategory="5"
            android:title="@string/action_jump_to_current"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_open_fanart"
        android:icon="@drawable/ic_fullscreen_24dp"
        android:orderInCategory="7"
        android:title="@string/action_open_fanart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_streaming"
        android:orderInCategory="8"
        android:title="@string/action_start_streaming"
        app:showAsAction="never" />
    <item android:title="@string/action_wikipedia"
        android:orderInCategory="100">
        <menu>
            <item
                android:id="@+id/action_wikipedia_album"
                android:title="@string/action_wikipedia_album" />
            <item
                android:id="@+id/action_wikipedia_artist"
                android:title="@string/action_wikipedia_artist" />
        </menu>
    </item>
</menu>