<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_song_play_next"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_enqueue_as_next"/>

    <item
        android:id="@+id/action_remove_song"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_remove_track"/>
    <item
        android:id="@+id/action_remove_album"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/action_remove_album"/>
    <item
        android:id="@+id/action_show_artist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_artist"/>
    <item
        android:id="@+id/action_show_album"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_album"/>
    <item
        android:id="@+id/action_add_to_saved_playlist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_add_to_saved_playlist"/>
    <item
        android:id="@+id/action_show_details"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_details"/>
</menu>