<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_song_play"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_play_song"/>
    <item
        android:id="@+id/action_song_enqueue"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_enqueue"/>

    <item
        android:id="@+id/action_song_play_next"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_enqueue_as_next"/>

    <item
        android:id="@+id/action_add_to_saved_playlist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_add_to_saved_playlist"/>

    <item
        android:id="@+id/action_remove_from_list"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/action_remove_from_list"/>
    <item
        android:id="@+id/action_show_details"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_details"/>
</menu>