<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_my_library_music_24dp"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/nav_saved_playlists"
            android:icon="@drawable/ic_queue_music_24dp"
            android:title="@string/menu_playlists" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_folder_48dp"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
    </group>
    <item
        android:id="@+id/nav_server_properties"
        android:checkable="true"
        android:icon="@drawable/ic_server_properties_24dp"
        android:title="@string/menu_server" />
    <item
        android:id="@+id/shop"
        android:checkable="true"
        android:icon="@drawable/ic_more_vert_24dp"
        android:title="Products" />
    <item
        android:checkable="true"
        android:title="@string/menu_settings">
        <menu>
            <item
            android:id="@+id/nav_profiles"
            android:checkable="true"
            android:icon="@drawable/ic_settings_profiles_24dp"
            android:title="@string/menu_profiles" />
            <item
                android:id="@+id/maps"
                android:checkable="true"
                android:icon="@drawable/ic_album_24dp"
                android:title="Maps" />
           <!-- <item
                android:id="@+id/nav_app_settings"
                android:checkable="true"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/menu_app_settings" /> -->
            <item
                android:id="@+id/logout"
                android:checkable="true"
                android:icon="@drawable/ic_cancel_24dp"
                android:title="Log Out"/>
        </menu>
    </item>


</menu>
