<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_add_directory"
        android:orderInCategory="2"
        android:icon="@drawable/ic_queue_24dp"
        android:title="@string/action_add_directory"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_update_database_here"
        android:orderInCategory="3"
        android:title="@string/action_update_database_here"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_albums_from_here"
        android:orderInCategory="4"
        android:title="@string/action_show_albums_from_here"
        android:visible="false"
        app:showAsAction="never" />
</menu>