<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/material_screen_edge_spacing"
        android:paddingStart="@dimen/material_screen_edge_spacing">

        <ImageView
            android:id="@+id/activity_about_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_icon_size"
            android:scaleType="fitCenter"
            android:src="@drawable/music_dna_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/app_name_nice"
            android:textColor="?attr/malp_color_accent"
            android:textSize="@dimen/material_font_style_size_headline" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-regular"
                android:gravity="center"
                android:text="@string/activity_about_version"
                android:textColor="?attr/malp_color_text_background_secondary"
                android:textSize="@dimen/material_font_style_size_subheading" />

            <TextView
                android:id="@+id/activity_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-regular"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="?attr/malp_color_text_background_secondary"
                android:textSize="@dimen/material_font_style_size_subheading" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="3">

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/material_content_spacing"
            android:autoLink="all"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/acknowledgement_text"
            android:textSize="@dimen/material_font_style_size_caption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/material_content_spacing"
            android:autoLink="all"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/sources_text"
            android:textSize="@dimen/material_font_style_size_caption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/license_text"
            android:textSize="@dimen/material_font_style_size_caption" />

    </LinearLayout>

</ScrollView>
